Wed Dec 13 02:37:14 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* ESet and MSet iterators now cope with being copied / assigned when
	  the internals are null.

	* Added copy method to OmPositionListIterator interface.  No
	  implementation for this yet though, or for the already existing
	  assignment method.

	* Added a couple of easy items to the todo list to check regarding
	  iterators.

Wed Dec 13 02:19:50 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix small bug in mset_range_is_same{,_weights}()

Wed Dec 13 02:07:59 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* And add copy and assignment for OmESet, similarly.

Wed Dec 13 01:58:38 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add copy and assignment operators to OmMSet so that the internals
	  get copied (rather than just the pointer to them).  Really want a
	  small internals class, holding a refcount to the real internals, or
	  else to use refcntptrs for the members of OmMSet::Internal which are
	  potentially large (eg, items)

Wed Dec 13 01:05:44 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add Asserts to api/omdatabaseinternal.cc to ensure that there is at
	  least one database present when opening termlists, etc.  This should
	  really be done by throwing errors.

	* Add destructor to OmMSet, deleting internals.

	* Implement getting positionlists from QuartzDatabases.

	* Fix bug in copy constructor of OmDocument::Internal - some fields
	  were not being copied.

	* Fix api_db.cc so it compiles: code referring to mset by subscripting
	  temporarily commented out.

Tue Dec 12 20:05:10 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix bug with truncation of intermediate keys in btrees.

Tue Dec 12 18:33:12 GMT 2000 Olly Betts

	* OmMSet::get_docs() now takes sane parameters.

	* Various test programs updated to nearly work with new OmMSet
	  interface.
